fix: adjusts spacing between messages

--- a/src/app/features/chat/components/chat-detail/chat-detail.component.sass
+++ b/src/app/features/chat/components/chat-detail/chat-detail.component.sass
@@ -20,6 +20,7 @@ main
         padding: 20px 0
         height: 84%
         @include flex-option($display: flex, $justify-content: null, $align-items: null, $direction: column)
+        gap: 20px
         
         .message
             @include flex-option($display: flex, $justify-content: null, $align-items: null, $direction: row)
